test/fail_compilation/fail226.d
struct Struct { 
        char* chptr; 
}

void main()
{
        immutable Struct iStruct;
        Struct y = iStruct;
}

